@@ -1,3 +1,7 @@
+Sun Aug 31 00:40:45 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* sampledriver/main.c: added.
+
 Sun Aug 31 00:02:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_wrap_cstr): new function.
